--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
         @keyframes load {
             0% {
-                width: 0;
+                background-position: 100% 0;
             }
             100% {
-                width: 100%;
+                background-position: -100% 0;
             }
         }
 
