--- a/index.html
+++ b/index.html
@@ -42,23 +42,25 @@
 </nav>
 
 <!-- Masthead-->
-<header class="masthead bg-primary text-white text-center">
-    <div class="container d-flex align-items-center flex-column">
-        <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="img/avatar.png" alt=""/>
-        <!-- Masthead Heading-->
-        <div id="treeJS"></div>
-        <h1 class=" text-uppercase mb-0">Vitold Radkevich</h1>
-        <!-- Icon Divider-->
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon">
-                <i class="fas fa-graduation-cap"></i>
+<header class="masthead text-white text-center" id="background3D">
+        <div id="hero">
+            <div class="container d-flex align-items-center flex-column">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="img/avatar.png" alt=""/>
+                <!-- Masthead Heading-->
+                <div id="treeJS"></div>
+                <h1 class=" text-uppercase mb-0">Vitold Radkevich</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                        <i class="fas fa-graduation-cap"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Masthead Subheading-->
+                <p class="masthead-subheading font-weight-light mb-0">Java - Web Developer - AWS</p>
             </div>
-            <div class="divider-custom-line"></div>
         </div>
-        <!-- Masthead Subheading-->
-        <p class="masthead-subheading font-weight-light mb-0">Java - Web Developer - AWS</p>
-    </div>
 </header>
 
 <script defer>
@@ -162,6 +164,27 @@
             }
         }, 30);
     });
+</script>
+
+<script>
+    window.onload = function () {
+        // Load and use neonCursor after the page is fully loaded
+        import('https://unpkg.com/threejs-toys@0.0.8/build/threejs-toys.module.cdn.min.js').then(({neonCursor}) => {
+            neonCursor({
+                el: document.getElementById('background3D'),
+                shaderPoints: 10,
+                curvePoints: 80,
+                curveLerp: 0.5,
+                radius1: 5,
+                radius2: 30,
+                velocityTreshold: 10,
+                sleepRadiusX: 100,
+                sleepRadiusY: 100,
+                sleepTimeCoefX: 0.0025,
+                sleepTimeCoefY: 0.0025
+            });
+        });
+    };
 </script>
 
 <!-- About Section-->
