Add Particles for Project page

--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
 
 <!-- Portfolio Section-->
 <section class="page-section portfolio" id="portfolio">
-    <div class="container">
+    <div id="particles-js">
+    <div class="container page-section-bg">
         <!-- Portfolio Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Projects</h2>
         <!-- Icon Divider-->
@@ -360,7 +361,7 @@
                 </div>
             </div>
         </div>
-        <!-- /.row -->
+    </div>
     </div>
 </section>
 
@@ -1082,6 +1083,9 @@
         });
     };
 </script>
+
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
