--- a/index.html
+++ b/index.html
@@ -120,15 +120,6 @@
                 </p>
             </div>
         </div>
-
-        <!-- About Section Button -->
-        <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-info" href="https://github.com/Vitold-sys">
-                <i class="fab fa-github mr-2"></i>
-                Here you can view my code
-            </a>
-        </div>
-
     </div>
 </section>
 
@@ -249,11 +240,11 @@
     </div>
 </section>
 
-<!-- Portfolio Section-->
+<!-- Projects Section-->
 <section class="page-section portfolio" id="portfolio">
     <div id="particles-js">
     <div class="container page-section-bg">
-        <!-- Portfolio Section Heading-->
+        <!-- Projects Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Projects</h2>
         <!-- Icon Divider-->
         <div class="divider-custom">
@@ -960,12 +951,10 @@
 
     document.getElementById('treeJS').appendChild(renderer.domElement);
 
-    //const geometry = new THREE.SphereGeometry( 15, 48, 48 );
+    const geometry = new THREE.TorusGeometry( 10, 3, 16, 100 );
 
-    const geometry = new THREE.BoxGeometry(6, 24, 24);
-
+    //const geometry = new THREE.BoxGeometry(6, 24, 24);
     const material = new THREE.MeshNormalMaterial();
-
     const mesh = new THREE.Mesh(geometry, material);
 
     mesh.scale.x = 0.1;
