--- a/index.html
+++ b/index.html
@@ -258,97 +258,97 @@
         <div class="row">
             <!-- Portfolio Item 4 -->
             <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal4">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
+                        <div class="portfolio-item-caption-content text-center text-secondary">
                             <i class="fas fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/belbort.png" alt="">
+                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
                 </div>
             </div>
 
             <!-- Portfolio Item 1 -->
             <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal1">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
+                        <div class="portfolio-item-caption-content text-center text-secondary">
                             <i class="fas fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
                 </div>
             </div>
 
             <!-- Portfolio Item 2 -->
             <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
+                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal2">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
+                        <div class="portfolio-item-caption-content text-center text-secondary">
                             <i class="fas fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
                 </div>
             </div>
 
             <!-- Portfolio Item 5 -->
             <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal5">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
+                        <div class="portfolio-item-caption-content text-center text-secondary">
                             <i class="fas fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-android" src="img/portfolio/android.png" alt="">
+                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
                 </div>
             </div>
 
             <!-- Portfolio Item 3 -->
             <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal3">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
+                        <div class="portfolio-item-caption-content text-center text-secondary">
                             <i class="fas fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
                 </div>
             </div>
 
             <!-- Portfolio Item 6 -->
             <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal6">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
+                        <div class="portfolio-item-caption-content text-center text-secondary">
                             <i class="fas fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/itra.png" alt="">
+                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
                 </div>
             </div>
 
             <!-- Portfolio Item 7 -->
             <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
+                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal7">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
+                        <div class="portfolio-item-caption-content text-center text-secondary">
                             <i class="fas fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/jsp.png" alt="">
+                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
                 </div>
             </div>
 
             <!-- Portfolio Item 8 -->
             <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
+                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal8">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-white">
+                        <div class="portfolio-item-caption-content text-center text-secondary">
                             <i class="fas fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/rest.png" alt="">
+                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
                 </div>
             </div>
         </div>
