Switch to version 6.5.1 of fontawesome

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="img/favicon.ico"/>
     <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/releases/v6.5.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
@@ -111,11 +111,7 @@
                 <p class="fade-in about-info" id="item6"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
                     Version control:</strong> GitHub, Bitbucket</p>
                 <p class="fade-in about-info" id="item7"><strong>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="34" height="52" fill="currentColor"
-                         class="bi bi-award text-warning" viewBox="0 0 26 26">
-                        <path d="M9.669.864 8 0 6.331.864l-1.858.282-.842 1.68-1.337 1.32L2.6 6l-.306 1.854 1.337 1.32.842 1.68 1.858.282L8 12l1.669-.864 1.858-.282.842-1.68 1.337-1.32L13.4 6l.306-1.854-1.337-1.32-.842-1.68zm1.196 1.193.684 1.365 1.086 1.072L12.387 6l.248 1.506-1.086 1.072-.684 1.365-1.51.229L8 10.874l-1.355-.702-1.51-.229-.684-1.365-1.086-1.072L3.614 6l-.25-1.506 1.087-1.072.684-1.365 1.51-.229L8 1.126l1.356.702z"/>
-                        <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1z"/>
-                    </svg>
+                    <i class="fas fa-award text-warning"></i>
                     AWS certified</strong></p>
                 </p>
             </div>
@@ -243,116 +239,124 @@
 <!-- Projects Section-->
 <section class="page-section portfolio" id="portfolio">
     <div id="particles-js">
-    <div class="container page-section-bg">
-        <!-- Projects Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Projects</h2>
-        <!-- Icon Divider-->
-        <div class="divider-custom">
-            <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon">
-                <i class="fas fa-box-open"></i>
+        <div class="container page-section-bg">
+            <!-- Projects Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Projects</h2>
+            <!-- Icon Divider-->
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon">
+                    <i class="fas fa-box-open"></i>
+                </div>
+                <div class="divider-custom-line"></div>
             </div>
-            <div class="divider-custom-line"></div>
+            <!-- Portfolio Grid Items-->
+            <div class="row">
+                <!-- Portfolio Item 4 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal4">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 1 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal1">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 2 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal2">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 5 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal5">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 3 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal3">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 6 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal6">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 7 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal7">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 8 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal8">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- Portfolio Grid Items-->
-        <div class="row">
-            <!-- Portfolio Item 4 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal4">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-secondary">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 1 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal1">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-secondary">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 2 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal2">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-secondary">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 5 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal5">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-secondary">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 3 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal3">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-secondary">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 6 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal6">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-secondary">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 7 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal7">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-secondary">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                </div>
-            </div>
-
-            <!-- Portfolio Item 8 -->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center" data-toggle="modal" data-target="#portfolioModal8">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                        <div class="portfolio-item-caption-content text-center text-secondary">
-                            <i class="fas fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
 <!-- Contact Section -->
@@ -931,7 +935,7 @@
 <script src="js/app.js"></script>
 <script>
     var update;
-    update = function() {
+    update = function () {
         requestAnimationFrame(update);
     };
     requestAnimationFrame(update);
@@ -960,7 +964,7 @@
 
     document.getElementById('treeJS').appendChild(renderer.domElement);
 
-    const geometry = new THREE.TorusGeometry( 10, 3, 16, 100 );
+    const geometry = new THREE.TorusGeometry(10, 3, 16, 100);
 
     //const geometry = new THREE.BoxGeometry(6, 24, 24);
     const material = new THREE.MeshNormalMaterial();
