--- a/index.html
+++ b/index.html
@@ -252,104 +252,97 @@
             </div>
             <!-- Portfolio Grid Items-->
             <div class="row">
-                <!-- Portfolio Item 4 -->
-                <div class="col-md-6 col-lg-4 mb-3">
-                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
-                         data-toggle="modal" data-target="#portfolioModal4">
-                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-secondary">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 1 -->
-                <div class="col-md-6 col-lg-4 mb-3">
-                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
-                         data-toggle="modal" data-target="#portfolioModal1">
-                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-secondary">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 2 -->
-                <div class="col-md-6 col-lg-4 mb-3">
-                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
-                         data-toggle="modal" data-target="#portfolioModal2">
-                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-secondary">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 5 -->
-                <div class="col-md-6 col-lg-4 mb-3">
-                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
-                         data-toggle="modal" data-target="#portfolioModal5">
-                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-secondary">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 3 -->
-                <div class="col-md-6 col-lg-4 mb-3">
-                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
-                         data-toggle="modal" data-target="#portfolioModal3">
-                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-secondary">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 6 -->
-                <div class="col-md-6 col-lg-4 mb-3">
-                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
-                         data-toggle="modal" data-target="#portfolioModal6">
-                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-secondary">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 7 -->
-                <div class="col-md-6 col-lg-4 mb-3">
-                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
-                         data-toggle="modal" data-target="#portfolioModal7">
-                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-secondary">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
-                    </div>
-                </div>
-
                 <!-- Portfolio Item 8 -->
                 <div class="col-md-6 col-lg-4 mb-3">
                     <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
                          data-toggle="modal" data-target="#portfolioModal8">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-secondary">
-                                <i class="fas fa-plus fa-3x"></i>
+                            <div class="portfolio-item-caption-content text-center text-secondary font-italic glowing-text">
+                                Project 8
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+                <!-- Portfolio Item 7 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal7">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary font-italic glowing-text">
+                                Project 7
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+                <!-- Portfolio Item 6 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal6">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary font-italic glowing-text">
+                                Project 6
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+                <!-- Portfolio Item 5 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal5">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary font-italic glowing-text">
+                                Project 5
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+                <!-- Portfolio Item 4 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal4">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary font-italic glowing-text">
+                                Project 4
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+                <!-- Portfolio Item 3 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal3">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary font-italic glowing-text">
+                                Project 3
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+                <!-- Portfolio Item 2 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal2">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary font-italic glowing-text">
+                                Project 2
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
+                    </div>
+                </div>
+                <!-- Portfolio Item 1 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="portfolio-item mx-auto d-flex align-items-center justify-content-center"
+                         data-toggle="modal" data-target="#portfolioModal1">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-secondary font-italic glowing-text">
+                                Project 1
                             </div>
                         </div>
                         <img class="img-fluid" src="img/portfolio/icons8-folder-256.png" alt="">
@@ -357,6 +350,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 <!-- Contact Section -->
