Update first modal item

--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@
             <div class="modal-body text-center">
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-lg-8">
+                        <div class="col-lg-8 font-italic">
                             <!-- Portfolio Modal - Title -->
-                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Webber</h2>
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 1</h2>
                             <!-- Icon Divider -->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
@@ -440,37 +440,42 @@
                                 </div>
                                 <div class="divider-custom-line"></div>
                             </div>
-                            <!-- Portfolio Modal - Image -->
-                            <img class="img-fluid rounded mb-5" src="img/portfolio/cabin.png" alt="">
-                            <!-- Portfolio Modal - Text -->
-                            <h5 class="mb-1">Chat web application</h5>
-                            <div class="card text-white bg-info mb-3" class="mb-1">
+                            <div class="card text-white bg-info mb-3 mb-1 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        There is a welcome page, login page, user additions (when adding a user, you
-                                        must specify a username, password, as well as mail, to which a message will come
-                                        with a link to account activation); After login, the main functionality of the
-                                        application is available: chat; editing the password and Mail specified during
-                                        registration is also available.
+                                        The project involves building a secure cryptocurrency wallet risk assessment system and a versatile crypto exchange platform. The goal is to provide users with a safe environment for managing digital assets and facilitating transactions, fostering the adoption of cryptocurrencies in the financial landscape.
                                 </div>
                                 <ul class="list-group list-group-item-info">
-                                    <li class="list-group-item"><h6>The following technologies have been used:</li>
-                                    <li class="list-group-item">
-                                        Spring - to create an MVC application;
-                                        <br>Freemarker - page templates;
-                                        <br>Bootstrap - for page layout;
-                                        <br>Flyway - for database migration;
-                                    </li>
+                                    <table class="table table-bordered table-info">
+                                        <thead>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>Roles</td>
+                                            <td>Java developer</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Team</td>
+                                            <td>6 (4 programmers, project manager, qa)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Technologies</td>
+                                            <td>Spring, Hibernate, Docker, Git, JUnit, PostgreSQL, JWT, Stripe</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Skills</td>
+                                            <td>Move to the new AWS infrastructure, support project, add new
+                                                functionality
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Duration</td>
+                                            <td>6 months</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
                                 </ul>
                             </div>
-                            <a class="btn btn-outline-success" href="https://webber1.herokuapp.com/">
-                                <i class="fas fa-server"></i>
-                                Webber
-                            </a>
-                            <a class="btn btn-outline-primary" href="https://github.com/Vitold-sys/Vitbort_Spring_MVC">
-                                <i class="fab fa-git"></i>
-                                Repository
-                            </a>
                             <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
                                 <i class="far fa-times-circle"></i>
                                 Back
